# courses-code

./: readme.md
2021-03-29-python-intermediate/: age.py  bank_account_class.py  bank_account_class_demo.py  machine_learning_demo.ipynb  numpy_demo.ipynb  pandas_demo.ipynb  playground.ipynb  tasks.md  titanic.csv  titanic.ipynb  titanic.xlsx  titanic_class.py  titanic_demo.py  titanic_download_csv.py  titanic_passenger.py  titanic_print_five_passengers.py  topics.txt
2021-09-06-react-power-workshop/: CODESANDBOX-LINK.txt
2021-09-20-data-analysis-in-python-pandas-numpy/: 0_overview.ipynb  1_basics.ipynb  exchange_rates.ipynb  iris.ipynb  iris_classification.ipynb  missing_data.ipynb  numpy_details.ipynb  run_titanic_class.ipynb  sp500.ipynb  titanic.ipynb  titanic.py  vaccinations.ipynb
2021-10-20-react/: codesandboxes.txt
2021-11-08-react/: codesandboxes.md  themen.md
2021-11-16-python-data-mining/: diabetes_regression.ipynb  iris_classification_sklearn.ipynb  notizen.md  numpy_demo.ipynb  overview.ipynb  pandas_demo.ipynb
2021-12-01-react/: codesamdboxes.md  codesandboxes.md  themen.md
2021-12-13-react/: anmerkungen-oresi.md  notizen.md
2021-12-15-react/: codesandboxes.md  themen.md
2022-01-17-react/: codesandbox-url.md  themen.md
2022-02-08-python-data-science/: data.pickle  notes.md  numpy_demo.ipynb  pandas_demo.ipynb  plotting.ipynb
2022-02-21-react/: codesandboxes.md  package-lock.json  package.json
2022-03-07-react/: codesandboxes.md  themen.md
2025-02-04-python/sample_package_marko_knoebl/: README.md  pyproject.toml
(+1828 files in other folders)
